Bug 1876366 [Linux] Allow to use legacy cursor if widget.gtk.legacy-cursors.enabled is set r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D204351